--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div class="product-container">
           <div class="product-image">
             <!-- image goes here -->
+            <img v-bind:src="image"/>
+            <a :href="url">Google</a>
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
